--- a/workers/wrangler.toml
+++ b/workers/wrangler.toml
@@ -11,6 +11,7 @@ database_id = "1f1d5a74-8932-4db3-8128-0921c2cd6675"
 # 环境变量
 [vars]
 DOMAIN_NAME = "dengzi52.dpdns.org"
+# ACCESS_PASSWORD = ""  # 访问密码（留空则不启用访问控制）
 
 # Workers 配置
 workers_dev = true
