--- a/workers/wrangler.toml
+++ b/workers/wrangler.toml
@@ -7,13 +7,13 @@ compatibility_flags = ["nodejs_compat"]
 [[d1_databases]]
 binding = "DB"
 database_name = "tempemail"
-database_id = "1f1d5a74-8932-4db3-8128-0921c2cd6675"
+database_id = "your_d1_database_id"  # 替换为你的 D1 数据库 ID
 
-# 环境变量
+# 环境变量（请替换为你自己的值）
 [vars]
-DOMAIN_NAME = "dengzi52.dpdns.org"
-ACCESS_PASSWORD = "admin123"  # 访问密码（设置后需要登录才能访问系统）
-TEMPMAILAPI_KEY = "CZXXyF8jg5JRH7UbQWVYiKMQjQznCB6"  # TempMailApi.com API密钥
+DOMAIN_NAME = "your-domain.com"
+ACCESS_PASSWORD = "your_access_password"  # 访问密码（设置后需要登录才能访问系统）
+TEMPMAILAPI_KEY = "your_tempmailapi_key"  # TempMailApi.com API密钥
 
 # Workers 配置
 workers_dev = true
