--- a/workers/wrangler.toml.example
+++ b/workers/wrangler.toml.example
@@ -4,10 +4,11 @@ compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
 # D1 数据库绑定（生产环境）
+# 请替换为你自己的数据库 ID
 [[d1_databases]]
 binding = "DB"
 database_name = "tempemail"
-database_id = "your_d1_database_id"  # 替换为你的 D1 数据库 ID
+database_id = "your_d1_database_id_here"
 
 # 环境变量（请替换为你自己的值）
 [vars]
@@ -33,8 +34,7 @@ class_name = "WebSocketDurableObject"
 tag = "v1"
 new_sqlite_classes = [ "WebSocketDurableObject" ]
 
-# 路由配置（生产环境）
+# 路由配置（生产环境，可选）
 # [[routes]]
 # pattern = "api.yourdomain.com/*"
 # zone_name = "yourdomain.com"
-
